develope-auth-module

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+NODE_ENV = 'development'
 PORT = 3000
 MONGODB_URL = "mongodb://localhost:27017/Divar"
+JWT_SECRET = "RJ@jpq024)@$!R)#afs"
+COOKIE_SECRET = "jFJ3ljt9!@$(()ac-f9a3a)"
